<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_job_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="9sp"
            android:textAppearance="@style/h1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/h1" />

        <TextView
            android:id="@+id/txt_job_wage"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="6sp"
            android:textAppearance="@style/rp_120_000"
            app:layout_constraintBottom_toBottomOf="@+id/txt_job_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_job_name"
            tools:text="@string/rp_120_000" />

        <TextView
            android:id="@+id/txt_job_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="6sp"
            android:textAppearance="@style/kaizen_coff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_job_name"
            tools:text="@string/kaizen_coff" />

        <TextView
            android:id="@+id/txt_job_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right|top"
            android:lineSpacingExtra="9sp"
            android:textAppearance="@style/per_day"
            app:layout_constraintBottom_toBottomOf="@+id/txt_job_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_job_place"
            tools:text="@string/per_day" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_job_place">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:contentDescription="location"
                app:srcCompat="@drawable/ic_pin" />

            <TextView
                android:id="@+id/txt_job_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lineSpacingExtra="6sp"
                android:textAppearance="@style/km_away_888"
                tools:text="@string/km_away_888" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:contentDescription="location"
                app:srcCompat="@drawable/ic_person" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:lineSpacingExtra="6sp"
                android:text="Location Manager"
                android:textAppearance="@style/km_away_888" />

            <TextView
                android:id="@+id/txt_manager_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:lineSpacingExtra="6sp"
                android:textAppearance="@style/km_away_888"
                tools:text="Yai Thong-oon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:contentDescription="location"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:lineSpacingExtra="6sp"
                android:text="Contact Number"
                android:textAppearance="@style/km_away_888" />

            <TextView
                android:id="@+id/txt_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:lineSpacingExtra="6sp"
                android:textAppearance="@style/km_away_888"
                tools:text="+66-955-5695-65" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lineSpacingExtra="6sp"
                android:text="Clock in"
                android:textAppearance="@style/km_away_888" />

            <TextView
                android:id="@+id/txt_clock_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:text="-"
                android:textAppearance="@style/am"
                tools:text="@string/am" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="6sp"
                android:text="Clock out"
                android:textAppearance="@style/km_away_888" />

            <TextView
                android:id="@+id/txt_clock_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:lineSpacingExtra="0sp"
                android:text="-"
                android:textAppearance="@style/am"
                tools:text="@string/am" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_clock"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/circle_button"
        android:text="Clock In"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>